samples/_failures_safe/1761707399_5496cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc1671f5.c: In function ‘main’:
./samples/SAFE/__tmp_cc1671f5.c:135:16: error: expected ‘)’ at end of input
  135 |     rows = (int
      |            ~   ^
      |                )
./samples/SAFE/__tmp_cc1671f5.c:135:5: error: expected declaration or statement at end of input
  135 |     rows = (int
      |     ^~~~
